2008-06-05  Ivan Frade <ivan.frade@nokia.com>
	
	* src/trackerd/tracker-email-plugin.h: Email plugin interface.
	
	* src/trackerd/tracker-email.c: Consistent function names. _init
	is now _start_watching_emails and _shutdown is now 
	_end_watching_emails.	

	* src/trackerd/tracker-email-[modest,kmail,evolution,thunderbird].c:
	Renamed method names to "implement" the plugin interface.

	* src/trackerd/tracker-main.c: Use the new 
	(_start,_end)_watching_emails functions.

	
2008-06-04  Carlos Garnacho  <carlos@imendio.com>

	* filters/application/*:
	* filters/text/*: Dump text in stdout instead of a temp file.

2008-06-04  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/tracker-indexer-module.[ch]
	(tracker_indexer_module_get_text): New
	function, returns the contained/extracted text for a file.
	* src/tracker-indexer/modules/files.c (tracker_module_get_file_text)
	(tracker_metadata_call_text_filter): Added, either get the text for
	text/development files, or call the external filter, which returns the
	contained text.

2008-06-04  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/modules/files.c (tracker_metadata_get_embedded):
	Check ontology to see whether the file could contain embedded
	metadata.
	(check_exclude_file) (tracker_module_get_file_metadata): Check whether
	the file should be excluded for any kind of data extraction.

2008-06-04  Carlos Garnacho  <carlos@imendio.com>

	* src/libtracker-db/tracker-db-interface-sqlite.c
	(tracker_db_interface_sqlite_execute_procedure)
	(tracker_db_interface_sqlite_execute_procedure_len): Do not choke with
	NULL arguments, instead trust the caller on the number of arguments
	passed and allow passing NULL values to these functions.

2008-06-03  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-type-utils.h: Fixed glib include
	build warning.
	
	* src/libtracker-db/tracker-db-manager.[ch]: 
	* src/tracker-indexer/tracker-indexer-db.[ch]: